edit_goods.php add 與edit 最後做

--- a/css/css.css
+++ b/css/css.css
@@ -11,6 +11,7 @@ body
 	margin:20px auto 20px auto;
 	border:#000 solid 1px;
 	min-height:768px;
+	
 }
 #top a
 {
@@ -44,7 +45,7 @@ body
 	display:inline-block;
 	width:71%;
 	padding:2%;
-	min-height:550px;
+	height:550px;
 	border:#000 1px solid;
 	overflow: auto;
 }
